--- a/test/index.html
+++ b/test/index.html
@@ -39,7 +39,9 @@ let getNodeValue = function (node) {
     }
 
     return value;
-};
+},
+reDescribe = /[f|x]?describe/,
+reIt = /[f|x]?it/;
 
 let visitor = Object.setPrototypeOf({
     checkCallExpression: function (node, results, verbose) {
@@ -47,13 +49,16 @@ let visitor = Object.setPrototypeOf({
             let args = node.arguments,
                 name = node.callee.name;
 
-            if (name === 'describe') {
-                let map = new Map();
+            if (reDescribe.test(name)) {
+                let block = {
+                    identifier: name,
+                    map: new Map()
+                };
 
-                results.set(getNodeValue.call(this, args[0]), map);
-                return this.visit(args[1].body, map, verbose);
-            } else if (verbose && name === 'it') {
-                results.set(getNodeValue.call(this, args[0]), true);
+                results.set(getNodeValue.call(this, args[0]), block);
+                return this.visit(args[1].body, block.map, verbose);
+            } else if (verbose && reIt.test(name)) {
+                results.set(getNodeValue.call(this, args[0]), name);
             }
         }
 
@@ -163,33 +168,154 @@ let visitor = Object.setPrototypeOf({
     }
 }, null);
 
-function* generateTree(file, printer, verbose) {
-    let contents = yield visitTree(file, verbose);
+function getSuite(file) {
+    return new Promise((resolve, reject) => {
+        resolve(file);
+    });
 }
 
 function makeTree(file, printer, verbose) {
-    // TODO: Need a generator/Promise pattern here.
-    let it = generateTree(file, printer, verbose);
-
-    it.next().value.then((results) => {
-        console.log(results);
+    getSuite(file)
+    .then((suite) => {
+        let contents = visitTree(suite, verbose);
+        return printer.init(contents, verbose);
     })
-    .catch(console.log);
+    .then(console.log)
+    .catch(console.log)
 }
 
-function visitTree(file, verbose) {
-    return new Promise((resolve, reject) => {
-        console.log('Just a moment while we crunch your suite...');
-
-        resolve(visitor.visit(esprima.parse(file), new Map(), verbose));
-    });
+function visitTree(suite, verbose) {
+    console.log('Just a moment while we crunch your suite...');
+    return visitor.visit(esprima.parse(suite), new Map(), verbose);
 }
+
+/*
+let printer = Object.setPrototypeOf({
+    makeChildNode: function (name, type) {
+        return `<p class="${this.indent < 2 ? 'stripe' : ''}">
+            <span class="${type}">
+                ${
+                    type.indexOf('describe') > -1 ?
+                    `(<a href="#">${type}</a>)` :
+                    'it -> '
+                }
+            </span>
+            <span>${name}</span>
+        </p>`;
+    },
+
+    init: function (results, verbose) {
+        return new Promise((resolve, reject) => {
+            for (let m of results.entries()) {
+                let suiteName = m[0],
+                    // Trim quotes from the begin and end of the suiteName.
+                    newFile = suiteName.replace(/^['"]|['"]$/g, '') + '_suite.html',
+                    tpl;
+
+                this.print(m[1].map, [], verbose);
+            }
+        });
+    },
+
+    print: function (map, buf, verbose) {
+        this.indent++;
+
+        for (let entry of map.entries()) {
+            let entry1 = entry[1],
+                map = entry1.map,
+                leftPadding = !(this.indent < 2) ? 'padding-left: 50px;' : '';
+
+            if (map || !verbose) {
+                let child = [];
+
+                buf.push(`<div style="${leftPadding}">`);
+                child.push(this.makeChildNode(entry[0], entry1.identifier));
+
+                // Note that will send an enclosing DIV to wrap all the children for
+                // the collapse/expand behavior.
+                child.push(this.print(map, ['<div>'], verbose));
+                child.push('</div>');
+
+                buf.push(child.join(''), '</div>');
+            } else {
+                buf.push(`<div style="${leftPadding}">`);
+                buf.push(this.makeChildNode(entry[0], entry1));
+                buf.push('</div>');
+            }
+        }
+
+        this.indent--;
+
+        return buf.join('');
+    }
+}, null);
+*/
+
+// We're not worried about putting a counter and a list on the prototype here because each process ends
+// directly after the Promises are resolved and there is only ever one 'child' object created at a time.
+let BasePrinter = Object.create(null, {
+    indent: {
+        value: 0,
+        writable: true
+    },
+
+    print: {
+        value: function (map, verbose) {
+            this.indent++;
+
+            for (let entry of map.entries()) {
+                let entry1 = entry[1],
+                    map = entry1.map
+
+                this.captureRow(entry[0], (verbose && !map ? entry1 : entry1.identifier));
+
+                if (map && map.size) {
+                    this.print(map, verbose);
+                }
+            }
+
+            this.indent--;
+        }
+    },
+
+    rows: {
+        value: []
+    }
+});
+
+let getTabs = (indent) => {
+    let tabs = '';
+
+    while (indent) {
+        return getTabs(--indent) + '\t';
+    }
+
+    return tabs;
+};
+
+let printer = Object.setPrototypeOf({
+    init: function (results, verbose) {
+        // A Promise isn't strictly necessary here.
+        return new Promise((resolve) => {
+            for (let entry of results.entries()) {
+                console.log(entry[0]);
+                this.print(entry[1].map, verbose);
+            }
+
+            resolve(this.rows.join('\n'));
+        });
+    },
+
+    captureRow: function (name, type) {
+        console.log(`${getTabs(this.indent)}${type} ${name}`);
+    }
+}, BasePrinter);
 
 document.addEventListener('DOMContentLoaded', () => {
     let xhr = new XMLHttpRequest();
 
     xhr.onload = () => {
-        makeTree(xhr.responseText, /*printer*/ null, /*argv.verbose*/ false);
+        makeTree(xhr.responseText, printer, /*argv.verbose*/ true);
     };
 
     xhr.open('GET', 'suite.js');
