Fixed bug and corresponding tests

--- a/spec/dump_describes_suite.html
+++ b/spec/dump_describes_suite.html
@@ -240,8 +240,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
-                <span class="xdescribe">
-                    (<a href="#">xdescribe</a>)
+                <span class="describe">
+                    (<a href="#">describe</a>)
                 </span>
                 <span>'CallExpression'</span>
             </p><div><div style="padding-left: 50px;"><p class="">
@@ -335,8 +335,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
-                <span class="xdescribe">
-                    (<a href="#">xdescribe</a>)
+                <span class="describe">
+                    (<a href="#">describe</a>)
                 </span>
                 <span>'CallExpression'</span>
             </p><div><div style="padding-left: 50px;"><p class="">
