Added limited support for ArrowFE and FE
Also, fixed AssignmentExpression.

--- a/spec/dump_describes_suite.html
+++ b/spec/dump_describes_suite.html
@@ -228,6 +228,36 @@ span.xdescribe a:active {
                 <span class="describe">
                     (<a href="#">describe</a>)
                 </span>
+                <span>'ArrowFunctionExpression'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have file support'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have input support'</span>
+            </p></div></div></div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'AssignmentExpression'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have file support'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have input support'</span>
+            </p></div></div></div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
                 <span>'BinaryExpression'</span>
             </p><div><div style="padding-left: 50px;"><p class="">
                 <span class="it">
@@ -259,6 +289,21 @@ span.xdescribe a:active {
                     (<a href="#">describe</a>)
                 </span>
                 <span>'ConditionalExpression'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have file support'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have input support'</span>
+            </p></div></div></div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'FunctionExpression'</span>
             </p><div><div style="padding-left: 50px;"><p class="">
                 <span class="it">
                     it -> 
@@ -323,6 +368,36 @@ span.xdescribe a:active {
                 <span class="describe">
                     (<a href="#">describe</a>)
                 </span>
+                <span>'ArrowFunctionExpression'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have file support'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have input support'</span>
+            </p></div></div></div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'AssignmentExpression'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have file support'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have input support'</span>
+            </p></div></div></div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
                 <span>'BinaryExpression'</span>
             </p><div><div style="padding-left: 50px;"><p class="">
                 <span class="it">
@@ -354,6 +429,21 @@ span.xdescribe a:active {
                     (<a href="#">describe</a>)
                 </span>
                 <span>'ConditionalExpression'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have file support'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should have input support'</span>
+            </p></div></div></div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'FunctionExpression'</span>
             </p><div><div style="padding-left: 50px;"><p class="">
                 <span class="it">
                     it -> 
