--- a/spec/dump_describes_suite.html
+++ b/spec/dump_describes_suite.html
@@ -150,13 +150,13 @@ span.xdescribe a:active {
                 </span>
                 <span>'should not return any results when given code with errors'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should not return any results when given invalid input'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should not return any results when given input with errors'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -195,8 +195,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should work when returned from a block (file)'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should work when returned from a block (input)'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -205,13 +205,13 @@ span.xdescribe a:active {
                 </span>
                 <span>'it blocks'</span>
             </p><div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should work when returned from a block (file)'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should work when returned from a block (input)'</span>
             </p></div></div></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -235,8 +235,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -250,8 +250,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -265,8 +265,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -280,8 +280,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -295,8 +295,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -310,8 +310,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -325,8 +325,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -340,8 +340,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -355,8 +355,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have file support'</span>
             </p></div></div></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -375,8 +375,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -390,8 +390,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -405,8 +405,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -420,8 +420,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -435,8 +435,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -450,8 +450,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -465,8 +465,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -480,8 +480,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
@@ -495,8 +495,8 @@ span.xdescribe a:active {
                 </span>
                 <span>'should have file support'</span>
             </p></div><div style="padding-left: 50px;"><p class="">
-                <span class="it">
-                    it -> 
+                <span class="xit">
+                    xit -> 
                 </span>
                 <span>'should have input support'</span>
             </p></div></div></div></div></div></div></div></div></div>
